--- a/main.tex
+++ b/main.tex
@@ -435,13 +435,15 @@
 %---------------------------------------------------------------------------------------
 %	META SKILLS
 %----------------------------------------------------------------------------------------
-	\fcolorbox{white}{white}{\begin{minipage}[c][1.5cm][c]{1\mpwidth}
-		\LARGE{\textbf{\textcolor{maincol}{Philip Empl}}} \\[2pt]
-		\normalsize{ \textcolor{maincol} {Management Information Systems (M. Sc.)} }
+	\fcolorbox{white}{white}{\begin{minipage}[c][1.5 cm][c]{2\mpwidth}
+		\large{\textbf{\textcolor{maincol}{Michail-Achillefs Katarachias}}} \\[2pt]
+		\normalsize{ \textcolor{maincol} {Earth and Space Physics and \\Engineering (M. Sc.)} }\\
+		\normalsize{ \textcolor{maincol} {Environmental Engineering (M. Sc.)} }
+
 \end{minipage}} \\
-\icontext{CaretRight}{12}{XX.XX.XXXX in Los Angeles}{black}\\[6pt]
-\icontext{CaretRight}{12}{german}{black}\\[6pt]
-\icontext{CaretRight}{12}{unmarried}{black}\\[6pt]
+\icontext{CaretRight}{12}{\textbf{Date of Birth:} 17.1.1993}{black}\\[6pt]
+\icontext{CaretRight}{12}{\textbf{Nationality:} Greek}{black}\\[6pt]
+
 
 
 
@@ -452,8 +454,6 @@
 \cvskill{Cyber security} {4+ yrs.} {0.64} \\[-2pt]
 
 \cvskill{Internet business/ \newline E-commerce} {4+ yrs.} {0.64} \\[-2pt]
-
-\cvskill{Web development} {2+ yrs.} {0.32} \\[-2pt]
 
 \cvskill{Big data/ \newline Data science} {2+ yrs.} {0.32} \\[-2pt]
 
